wp_derive_request_builder/tests/fail/missing_url.stderr
error: Missing (url = "/foo")
 --> tests/fail/missing_url.rs:5:7
  |
5 |     #[contextual_get(params = &UserListParams, output = Vec<SparseUser>)]
  |       ^^^^^^^^^^^^^^
